Fix scrolling to anchor on load

Bug: 788486
Change-Id: I67f78372380f043bf88fda036bf7c263b17fbca0